--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel Package Test
 
 on:
   push:
@@ -7,29 +7,45 @@ on:
     branches: [ "main" ]
 
 jobs:
-  laravel-tests:
-
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        laravel: [ "11.*", "12.*" ]
+        php: [ "8.2", "8.3" ]
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.2'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
+        php-version: ${{ matrix.php }}
+        extensions: mbstring, intl, bcmath, pdo, sqlite, fileinfo
+        coverage: none
+
+    - name: Create Laravel app
       run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+        composer create-project laravel/laravel:^${{ matrix.laravel }} test-app
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+        COMPOSER_MEMORY_LIMIT: -1
+
+    - name: Require package
+      run: |
+        cd test-app
+        composer config repositories.local '{"type": "path", "url": "../", "options": {"symlink": true}}'
+        composer require siberfx/turkiye-il-ilce-mahalle:dev-main
+      env:
+        COMPOSER_MEMORY_LIMIT: -1
+
+    - name: Copy package files
+      run: |
+        rsync -a --exclude='test-app' ./ test-app/packages/turkiye-adresler-json/
+      shell: bash
+
+    - name: Run package tests
+      run: |
+        cd test-app
+        php artisan vendor:publish --all
+        ./vendor/bin/phpunit ../packages/turkiye-adresler-json/tests
