--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: [ "11.*", "12.*" ]
+        laravel: [ "11", "12" ]
         php: [ "8.2", "8.3" ]
 
     steps:
