--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,6 +13,11 @@ jobs:
       matrix:
         laravel: [ "11", "12" ]
         php: [ "8.2", "8.3" ]
+        include:
+          - laravel: "11"
+            stability: "stable"
+          - laravel: "12"
+            stability: "stable"
 
     steps:
     - name: Checkout code
@@ -27,7 +32,7 @@ jobs:
 
     - name: Create Laravel app
       run: |
-        composer create-project laravel/laravel:^${{ matrix.laravel }} test-app
+        composer create-project laravel/laravel:^${{ matrix.laravel }} test-app ${{ matrix.stability }}
       env:
         COMPOSER_MEMORY_LIMIT: -1
 
@@ -35,14 +40,19 @@ jobs:
       run: |
         cd test-app
         composer config repositories.local '{"type": "path", "url": "../", "options": {"symlink": true}}'
-        composer require siberfx/turkiye-address:dev-main
+        composer require siberfx/turkiye-address:dev-main --dev
       env:
         COMPOSER_MEMORY_LIMIT: -1
+
+    - name: Install test dependencies
+      run: |
+        cd test-app
+        composer require --dev phpunit/phpunit ^10.0 --with-all-dependencies
 
     - name: Publish package assets
       run: |
         cd test-app
-        php artisan turkiye:publish --migrations --config --seeders --force
+        php artisan turkiye:publish --migrations --seeders --force
 
     - name: Run migrations
       run: |
@@ -55,4 +65,6 @@ jobs:
         php artisan db:seed --class=Database\\Seeders\\DatabaseSeeder
 
     - name: Run package tests
-      run: composer test
+      run: |
+        cd test-app
+        ./vendor/bin/phpunit --testdox
