--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
     "name": "siberfx/turkiye-adresler-json",
     "description": "Laravel package for seeding Turkish address (city, district, neighborhood) tables from SQL dumps.",
+    "keywords": [
+        "laravel",
+        "turkey",
+        "address",
+        "city",
+        "district",
+        "neighborhood",
+        "seeder",
+        "sql"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -27,14 +37,10 @@
     },
     "require-dev": {
         "orchestra/testbench": "^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
-        "phpunit/phpunit": "^10.0",
-        "nunomaduro/collision": "^8.0.0 || ^9.0.0 || ^10.0.0"
+        "phpunit/phpunit": "^10.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
-    "keywords": [
-        "laravel", "turkey", "address", "city", "district", "neighborhood", "seeder", "sql"
-    ],
     "support": {
         "issues": "https://github.com/siberfx/turkiye-il-ilce-mahalle/issues",
         "source": "https://github.com/siberfx/turkiye-il-ilce-mahalle"
